--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,12 @@
 {
+ "theme_color": "#FFFFFF",
  "display": "fullscreen",
- "background_color": "#FFFFFF",
- "name": "ACHADO DIGITAL 360º",
+ "start_url": "index.htm",
  "icons": [
   {
    "type": "image/png",
-   "src": "misc/icon150.png",
-   "sizes": "150x150"
-  },
-  {
-   "type": "image/png",
-   "src": "misc/icon16.png",
-   "sizes": "16x16"
-  },
-  {
-   "type": "image/png",
-   "src": "misc/icon180.png",
-   "sizes": "180x180"
+   "src": "misc/icon512.png",
+   "sizes": "512x512"
   },
   {
    "type": "image/png",
@@ -25,21 +15,31 @@
   },
   {
    "type": "image/png",
-   "src": "misc/icon32.png",
-   "sizes": "32x32"
+   "src": "misc/icon180.png",
+   "sizes": "180x180"
   },
   {
    "type": "image/png",
-   "src": "misc/icon512.png",
-   "sizes": "512x512"
+   "src": "misc/icon150.png",
+   "sizes": "150x150"
   },
   {
    "type": "image/png",
    "src": "misc/icon64.png",
    "sizes": "64x64"
+  },
+  {
+   "type": "image/png",
+   "src": "misc/icon32.png",
+   "sizes": "32x32"
+  },
+  {
+   "type": "image/png",
+   "src": "misc/icon16.png",
+   "sizes": "16x16"
   }
  ],
- "start_url": "index.htm",
- "description": "PORTFÓLIO",
- "theme_color": "#FFFFFF"
+ "background_color": "#FFFFFF",
+ "name": "ACHADO DIGITAL 360º",
+ "description": "PORTFÓLIO"
 }
